<resources>
    <string name="app_name">             放游菜单             </string>
    <string name="forget_passwrod">      忘记密码?            </string>
    <string name="find_passwrod_word">   找回密码            </string>
    <string name="send_codeing">         发送验证码           </string>
    <string name="register_new_user">    注册新账号!           </string>
    <string name="register_new_user_word">    注册账号           </string>
    <string name="please_input_pwd">     请输入密码            </string>
    <string name="please_input_id">      请输入手机号           </string>
    <string name="please_input_codings">      请输入验证码           </string>
    <string name="ok_word">         确定           </string>
    <string name="login_word">         登录           </string>
    <string name="search_word">         搜索          </string>
    <string name="return_function">返回</string>
    <string name="title_activity_common">CommonActivity</string>
    <string name="title_activity_appmain">APPMainActivity</string>

    <string name="add_friend_word">添加店员</string>
    <string name="add_food_word">添加食物</string>
    <string name="add_table_word">添加桌号</string>

    <string name="edit_password">设置密码</string>
    <string name="ok_password1">请输入密码</string>
    <string name="ok_password2">请确认密码</string>

    <string name="edit_food_pic">设置食物图片</string>

    <string name="food_name">食物名称:</string>
    <string name="food_price">食物价格:</string>
    <string name="food_info">食物简介:</string>
    <string name="add_word">添加</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_food">AddFoodActivity</string>
    <string name="title_activity_add_table">AddTableActivity</string>
    
    <string name="shop_in_name">店内收入</string>
    <string name="shop_out_name">店内支出</string>
    <string name="shop_members_name">相关店员</string>
    <string name="shop_proedit_name">权限设置</string>

    <string name="UID">UID</string>
    <string name="PWD">PWD</string>
</resources>
