<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.jjkj.guoyouchao.fykj_food.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:paddingTop="@dimen/top_padding"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ok_input_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_hight_editbox"
            android:textColor="@color/appbar"
            android:textSize="@dimen/input_size"
            android:text="15010215839"
            android:inputType="phone"
            android:hint="@string/please_input_id"
            />


        <EditText
            android:id="@+id/ok_input_pwd"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/input_row_high"
            android:text="abc123"
            android:textColor="@color/appbar"
            android:inputType="textPassword"
            android:textSize="@dimen/input_size"
            android:layout_height="@dimen/input_hight_editbox"
            android:hint="@string/please_input_pwd"
            />

        <Button
            android:id="@+id/first_ok_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_word"
            android:textSize="@dimen/ok_word_size"
            android:background="@drawable/buttonshape"
            android:textColor="@color/white_color"

            android:layout_marginTop="@dimen/login_margin"
            android:layout_gravity="bottom|center_horizontal"
            />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <TextView
            android:id="@+id/forgetPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:text="@string/forget_passwrod"
            android:textColor="@color/appbar"
            />

        <TextView
            android:id="@+id/registerNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:text="@string/register_new_user"
            android:textColor="@color/appbar"
            />
    </FrameLayout>


</RelativeLayout>
