<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jjkj.guoyouchao.fykj_food.EditPassworld">

    <FrameLayout
        android:layout_width="match_parent"
        android:paddingTop="@dimen/top_padding"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/pwd1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_hight_editbox"
            android:textColor="@color/appbar"
            android:textSize="@dimen/input_size"
            android:hint="@string/ok_password1"
            />


        <EditText
            android:id="@+id/pwd2"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/input_row_high"
            android:textColor="@color/appbar"
            android:textSize="@dimen/input_size"
            android:layout_height="@dimen/input_hight_editbox"
            android:hint="@string/ok_password2"
            />

        <Button
            android:id="@+id/editpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok_word"
            android:textSize="@dimen/ok_word_size"
            android:background="@drawable/buttonshape"
            android:textColor="@color/white_color"

            android:layout_marginTop="@dimen/login_margin"
            android:layout_gravity="bottom|center_horizontal"
            />
    </FrameLayout>


</RelativeLayout>
